--- a/UserManager/UserManager.csproj
+++ b/UserManager/UserManager.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="process_15w_icon.ico" />
+    <None Include="Resources\btnExit.Image.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
